# UsageLeft

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TRADEMARK.md  copy-bundled.cjs  index.html  package.json  preview-light.html  rename.js  screenshot-pw.mjs  screenshot.cjs  vite.config.ts
.codex/environments/: environment.toml
.cursor/commands/: pr-review.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_provider.yml
.github/workflows/: deploy-pages.yml  pages.yml  publish.yml
docs/: capture-logs.md  linux-build.md  local-http-api.md  proxy.md
docs/plugins/: api.md  schema.md
docs/providers/: claude.md  codex.md  copilot.md  cursor.md  grok.md  jetbrains-ai-assistant.md  kiro.md  opencode-go.md  zai.md
plugins/: test-helpers.js
plugins/amp/: plugin.js  plugin.test.js
plugins/antigravity/: plugin.js  plugin.json  plugin.test.js
plugins/claude/: plugin.js  plugin.test.js
plugins/codex/: plugin.js  plugin.test.js
plugins/copilot/: plugin.js  plugin.json  plugin.test.js
plugins/cursor/: plugin.js  plugin.test.js
plugins/factory/: plugin.js  (+1 more)
scripts/: build-release.sh  bump-ccusage-version.mjs
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  panel.rs  tray.rs
src-tauri/src/local_http_api/: cache.rs  mod.rs  server.rs
src-tauri/src/plugin_engine/: host_api.rs  runtime.rs
web/: index.html  script.js  styles.css
(+76 files in other folders)
